<resources>
    <string name="app_name">First Project</string>
    <string name="about">Over a thousand years ago, Marco Polo returned to Italy from the Far East with a recipe that closely resembled what is now called sherbet. Historians estimate that this recipe evolved into ice cream sometime in the 16th century, Since then there is no looking back, ice cream has been enjoyed through the ages across the world and in India.\nCream Stone was launched at Hyderabad in 2009, and it was so loved and enjoyed and grew so popular that its stores soon started to open across India. Backed by Ice cream expertise and its worldwide research and development capabilities, in just 7 short years it expanded its operations in Andhra Pradesh, Telangana, Karnataka, Maharashtra, Kerala and Tamil Nadu.\nCream stone owes its success to its research and development team for its innovating flavors, and its quality control for bringing the best of ingredients and making magic on the stone.\nWe take pride in serving the highest quality premium ice cream blends, homemade waffle bowls &amp; cones, innovative recipes, a wide range of mix-ins and its undying dedication to enhance the customer experience at every stage. An upscale and world class experience in the premium ice-cream mix-in category, Cream Stone offers a luxurious atmosphere where customers can enjoy our carefully mixed creations or customize their own. Cream Stone is the ideal environment in which to enjoy such pleasures, where cool contemporary styling and casual comfort complete a thoroughly dreamy all-round ice cream experience.
    </string>
    <string name="Head">Cream Stone</string>
    <string name="Mission">Mission: \nTo offer our customers, the best ice cream experience they can have, with the finest ingredients with the most creative and innovative flavors.
    </string>
    <string name="Loc">9-B, Bibwewadi Kondhwa Rd, Market Yard, Gultekdi, Pune, Maharashtra 411037</string>
    <string name="Time">11AM–12:30AM</string>
    <string name="Link">http://creamstoneconcepts.com/</string>
</resources>
