<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.janglegmail.jairaj.firstproject.MainActivity">

    <RelativeLayout
        android:id="@+id/MainView"
        android:layout_width="368dp"
        android:layout_height="576dp"
        tools:layout_editor_absoluteX="9dp"
        tools:layout_editor_absoluteY="3dp">

        <TextView
            android:id="@+id/heading"
            android:layout_width="match_parent"
            android:layout_height="74dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:background="@color/colorAccent"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:text="@string/Head"
            android:textAppearance="@style/TextAppearance.AppCompat.Display2"
            android:textColor="#ffffff"
            android:textColorLink="@color/colorAccent"
            android:textSize="45sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <ImageView
            android:id="@+id/icecream"
            android:layout_width="368dp"
            android:layout_height="249dp"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/heading"
            android:cropToPadding="false"
            android:scaleType="fitStart"
            app:srcCompat="@drawable/creamstone"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="74dp" />


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/icecream">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:layout_editor_absoluteX="9dp"
                tools:layout_editor_absoluteY="3dp">

                <TextView
                    android:id="@+id/mission_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_marginTop="-3dp"
                    android:background="@color/Light_Pink"
                    android:fontFamily="sans-serif"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="@string/Mission"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Button"
                    android:textColorLink="@android:color/background_dark"
                    android:textSize="14sp" />

                <ImageView
                    android:id="@+id/location_img"
                    android:layout_width="30dp"
                    android:layout_height="35dp"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/mission_text"
                    android:layout_marginTop="12dp"
                    app:srcCompat="@drawable/location" />

                <TextView
                    android:id="@+id/location_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/location_img"
                    android:layout_alignTop="@+id/location_img"
                    android:layout_marginLeft="10dp"
                    android:layout_toEndOf="@+id/location_img"
                    android:autoLink="map"
                    android:text="@string/Loc"
                    android:textSize="14sp" />


                <ImageView
                    android:id="@+id/time_img"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/location_img"
                    android:layout_marginTop="11dp"
                    android:autoLink="map"
                    app:srcCompat="@drawable/clock" />

                <TextView
                    android:id="@+id/time_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/time_img"
                    android:layout_alignTop="@+id/time_img"
                    android:layout_marginLeft="10dp"
                    android:layout_toEndOf="@+id/time_img"
                    android:text="@string/Time"
                    android:textSize="14sp" />

                <ImageView
                    android:id="@+id/web_img"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/time_img"
                    android:layout_marginTop="10dp"
                    app:srcCompat="@drawable/web" />

                <TextView
                    android:id="@+id/link_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/web_img"
                    android:layout_alignTop="@+id/web_img"
                    android:layout_marginLeft="10dp"
                    android:layout_toEndOf="@+id/web_img"
                    android:autoLink="web"
                    android:text="@string/Link"
                    android:textSize="14sp" />

                <ImageView
                    android:id="@+id/info_img"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/web_img"
                    android:layout_marginTop="13dp"
                    app:srcCompat="@drawable/info" />

                <TextView
                    android:id="@+id/info_text"
                    android:layout_width="match_parent"
                    android:layout_height="550dp"
                    android:layout_alignTop="@+id/info_img"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_toEndOf="@+id/info_img"
                    android:text="@string/about"
                    android:textSize="14sp" />

            </RelativeLayout>

        </ScrollView>

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
